--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 asgiref==3.8.1
-Django==5.1.1
+Django==5.1.2
+django-environ==0.11.2
+django-simple-history==3.7.0
+pillow==11.0.0
+psycopg2==2.9.10
 sqlparse==0.5.1
 tzdata==2024.2
